Fix step header z-index

--- a/front/src/dashboard/transport/Wizard.scss
+++ b/front/src/dashboard/transport/Wizard.scss
@@ -7,7 +7,7 @@
   position: sticky;
   top: 0;
   background-color: #ffffff;
-  z-index: 10;
+  z-index: 1;
   padding: 15px 0;
 }
 .step-header li {
